force-app/main/default/objects/ABM_Penetration_Snapshot__c/ABM_Penetration_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Stores periodic penetration snapshots for ABM target accounts, used to calculate penetration trend over time.</description>
    <label>ABM Penetration Snapshot</label>
    <nameField>
        <displayFormat>SNAP-{0000}</displayFormat>
        <label>ABM Penetration Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABM Penetration Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>