force-app/main/default/objects/ABM_Penetration_Snapshot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ABM Penetration Snapshots</relationshipLabel>
    <relationshipName>ABM_Penetration_Snapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>