force-app/main/default/objects/ABM_Penetration_Snapshot__c/fields/Contact_Coverage_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Contact_Coverage_Snapshot__c</fullName>
    <label>Contact Coverage % (Snapshot)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>