force-app/main/default/objects/ABM_Penetration_Snapshot__c/fields/Penetration_Score_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Penetration_Score_Snapshot__c</fullName>
    <label>Penetration Score (Snapshot)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>