force-app/main/default/objects/ABM_Penetration_Snapshot__c/fields/Revenue_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Snapshot__c</fullName>
    <label>Revenue (Snapshot)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>